--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,7 @@ jobs:
         run: |
           echo VERSION_TAG=$(echo ${{ steps.version_step.outputs.version_tag }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
           echo LASTEST_TAG=$(echo ${{ steps.version_step.outputs.latest_tag  }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
+          echo ENV_PARAM=prod
 #
 #      - name: Build and push Docker images
 #        id: docker_build
@@ -71,7 +72,7 @@ jobs:
           # cd gooses_game_api
           # 使用Dockerfile构建镜像
           # docker build . --file Dockerfile --tag registry.cn-hangzhou.aliyuncs.com/goose_game/gooses_game_api:${{env.VERSION_TAG}}
-          docker build -t gooses_game_web:latest .
+          docker build --build-arg ENV_PARAM="${{env.ENV_PARAM}}" -t gooses_game_web:latest .
           docker tag gooses_game_web:latest registry.cn-hangzhou.aliyuncs.com/goose_game/gooses_game_web:latest
           # 推送镜像到镜像仓库
           docker push registry.cn-hangzhou.aliyuncs.com/goose_game/gooses_game_web:latest
