--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,6 @@ jobs:
         run: |
           echo VERSION_TAG=$(echo ${{ steps.version_step.outputs.version_tag }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
           echo LASTEST_TAG=$(echo ${{ steps.version_step.outputs.latest_tag  }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
-          echo ENV_PARAM="prod"
 #
 #      - name: Build and push Docker images
 #        id: docker_build
@@ -60,6 +59,8 @@ jobs:
 #          build-args: |
 #            ${{steps.version_step.outputs.version}}
       - name: Build the Docker image
+        env:
+          ENV_PARAM: prod
         run: |
           ls
           docker version
