--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "material-ui-nextjs",
+  "name": "material-ui-nextjs-ts",
   "version": "5.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
   },
   "dependencies": {
     "@emotion/cache": "latest",
@@ -14,10 +15,17 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
-    "eslint": "latest",
-    "eslint-config-next": "latest",
     "next": "latest",
+    "next-intl": "^2.20.2",
     "react": "latest",
     "react-dom": "latest"
+  },
+  "devDependencies": {
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
+    "typescript": "latest"
   }
 }
