--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
 #    needs: test
 #    if: startsWith(github.ref, 'refs/tags')
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags')
+    if: github.ref == 'refs/heads/ant-prod' || startsWith(github.ref, 'refs/tags')
     steps:
       - uses: actions/checkout@v2
       - name: Extract Version
