--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.17.2",
     "@ant-design/icons": "^5.2.6",
+    "ahooks": "^3.7.8",
     "antd": "^5.10.1",
     "axios": "^1.5.1",
+    "immer": "^10.0.3",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
