--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.17.2",
     "@ant-design/icons": "^5.2.6",
+    "@svgr/webpack": "^8.1.0",
     "ahooks": "^3.7.8",
     "antd": "^5.10.1",
     "axios": "^1.5.1",
@@ -22,6 +23,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.39.3",
     "sass": "^1.69.4",
+    "swiper": "^11.0.2",
     "use-immer": "^0.9.0"
   },
   "devDependencies": {
@@ -33,6 +35,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
+    "sharp": "^0.32.6",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
