--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-query": "^3.39.3",
+    "react-share": "^4.4.1",
     "sass": "^1.69.4",
     "swiper": "^11.0.2",
     "use-immer": "^0.9.0"
