--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-query": "^3.39.3",
     "react-share": "^4.4.1",
     "sass": "^1.69.4",
+    "store": "^2.0.12",
     "swiper": "^11.0.2",
     "use-immer": "^0.9.0"
   },
@@ -32,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/store": "^2.0.4",
     "@umijs/fabric": "^4.0.1",
     "autoprefixer": "^10",
     "eslint": "^8",
