--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
+    "plaiceholder": "^3.0.0",
     "postcss": "^8",
     "sharp": "^0.32.6",
     "tailwindcss": "^3",
