--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.3.2",
     "immer": "^10.0.3",
     "next": "13.5.6",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-infinite-scroll-component": "^6.1.0",
